<resources>
    <string name="app_name">临海市博物馆</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="base_permission">APP启动需要获取手机信息，访问文件等权限</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. Have you given the camera permission to the APP? Or you may need to restart the device.</string>

    <string name="ss">搜索</string>
    <string name="sys">扫一扫</string>
    <string name="shous">手输</string>
    <string name="sample_title_default">Default design</string>
    <string name="sample_title_attrs">Styling using attributes</string>
    <string name="sample_title_layout">Custom layout</string>
    <string name="sample_title_holder">Custom view holder</string>

    <string name="hint_enter_a_message">Type a message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="check_version">检查到新版本：</string>
    <string name="update_log">\n更新日志：\n</string>
    <string name="loading">正在下载</string>
    <string name="load_fail">下载失败</string>
    <string name="load_success">下载成功</string>
    <string name="edit_update">版本更新</string>
    <string name="update">更新</string>
    <string name="cancel">取消</string>
    <string name="load_app">下载安装包...</string>
    <string name="message_exhibit">临展咨询</string>
    <string name="notice_activity">活动公告</string>
    <string name="click_ok">点赞成功</string>
    <string name="cancel_click">取消点赞</string>
    <string name="rigister">注册</string>
    <string name="not_empty">用户名或者密码不能为空</string>
    <string name="noconstent">两次密码不一致</string>
    <string name="nickname">昵称：</string>
    <string name="login">登录</string>
    <string name="search_history">搜索历史</string>
    <string name="search_hot">热门搜索</string>
    <string name="input_empty">输入内容为空</string>
    <string name="going">加载中...</string>
    <string name="chinese">简体中文</string>
    <string name="group_no">组号：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="set_imghead">设置头像</string>
    <string name="scan_bigpic">查看大图</string>
    <string name="take_pass">拍照上传</string>
    <string name="select_camera">从相册中选择</string>
    <string name="city_select">城市选择</string>
    <string name="navigate">问卷调查</string>
    <string name="say_some">说两句</string>
    <string name="health">身体不适</string>
    <string name="hurt">受伤</string>
    <string name="other">其他</string>
    <string name="input_pwd">输入密码</string>
    <string name="input_again">再次输入密码</string>
    <string name="input_username">输入用户名</string>
    <string name="advice_reflect">意见反馈</string>
    <string name="my_group">我的群组</string>
    <string name="name">用户名</string>
    <string name="relative_exhibit">相关展品</string>
    <string name="search_result">搜索结果</string>
    <string name="clear_cache">清除缓存</string>
    <string name="edit_info">版本信息</string>
    <string name="exist_login">退出登录</string>
    <string name="wirte_comment">写下您的评论...</string>
    <string name="input_groupno">输入想要加入的群组号</string>
    <string name="create_group">创建群组</string>
    <string name="join_group">加入群组</string>
    <string name="search_content">搜索内容</string>
    <string name="get_help">呼救成功，工作人员会尽快到您的身边。</string>
    <string name="sure">确定</string>
    <string name="pub">发表</string>
    <string name="edit_nickname">编辑昵称</string>
    <string name="orig_pwd">原始密码：</string>
    <string name="new_pwd">新密码：</string>
    <string name="makesure_pwd">确认密码：</string>
</resources>
