<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:background="@mipmap/bg_name"
    android:layout_gravity="center"
    android:id="@+id/ll_name"
    android:layout_height="wrap_content">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:textSize="14sp"
    android:textColor="@color/black"
    android:text="@string/edit_nickname"/>

    <LinearLayout
        android:id="@+id/customPanel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_name_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/sure_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sure"
        android:background="@mipmap/bg_name_sure"
       android:layout_weight="1"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/cancel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@mipmap/bg_name_cancel"
        android:layout_gravity="center"
       android:layout_weight="1"
        android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>