<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
  android:layout_marginLeft="10dp"
   android:layout_marginRight="10dp"
    android:background="@drawable/regular">
    <TextView
        android:id="@+id/headSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="设置头像"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
    <TextView
        android:id="@+id/pic_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/colorBluee"
        android:text="@string/scan_bigpic"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
    <TextView
        android:id="@+id/takephoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/colorBluee"
        android:text="@string/take_pass"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
    <TextView
        android:id="@+id/sle_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/colorBluee"
        android:text="@string/select_camera"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
</LinearLayout>
<TextView
    android:id="@+id/cancel_take"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_gravity="center"
    android:paddingTop="12dp"
    android:layout_marginTop="10dp"
    android:paddingBottom="12dp"
    android:textColor="@color/colorBluee"
    android:background="@drawable/regular"
    android:gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:text="@string/cancel"/>
</LinearLayout>