<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_register_acticity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_laucher"
    android:orientation="vertical"
    tools:context="com.hengda.linhai.m.ui.RegisterActicity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@mipmap/logo_set" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/pressed_login"/>
        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorOrange"/>
        <ImageView
            android:id="@+id/register_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:src="@mipmap/normal_register"/>
    </LinearLayout>
    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_gravity="center"
        android:background="@mipmap/bg_input"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorOrange"
        android:hint="@string/input_username"/>
    <EditText
        android:id="@+id/pwd_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@mipmap/bg_input"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        android:textColorHint="@color/colorOrange"
        android:hint="@string/input_pwd"/>
    <EditText
        android:id="@+id/again_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@mipmap/bg_input"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/colorOrange"
        android:hint="@string/input_again"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_register"
        android:layout_marginTop="25dp"
        android:text="@string/rigister"
        android:textSize="20sp"
        android:layout_gravity="center"/>
</LinearLayout>
