<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg_laucher"
    tools:context="com.hengda.linhai.m.ui.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@mipmap/logo_set" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登录"
            android:textSize="20sp" />
        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorOrange"/>
        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注册"
            android:textSize="20sp"/>
    </LinearLayout>
    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@mipmap/bg_input"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/colorOrange"
        android:hint="输入用户名"/>
    <EditText
        android:id="@+id/pwd_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@mipmap/bg_input"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/colorOrange"
        android:hint="@string/input_pwd"/>
    <EditText
        android:id="@+id/again_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@mipmap/bg_input"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/colorOrange"
        android:hint="@string/input_again"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_register"
        android:layout_marginTop="25dp"
        android:text="@string/rigister"
        android:textSize="20sp"
        android:layout_gravity="center"/>
</LinearLayout>
